# wot_datfile_parser_py

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: CI.yml
example/: simple.py
src/: lib.rs
wot_datfile_parser_py/: __init__.py
