[package]
name = "wot_datfile_parser_py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wot_datfile_parser_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
serde_json = "1.0.91"
wot_datfile_parser = "0.4.1"
